[tool.poetry]
name = "sentiment-analyser"
version = "0.1.0"
description = ""
authors = ["Janos Hardi <janos-karoly.hardi@telekom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
transformers = "^4.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
