[tool.poetry]
name = "sentiment-analyser"
version = "0.1.0"
description = ""
authors = ["Janos Hardi <janos.hardi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
transformers = "^4.47.1"
slowapi = "^0.1.9"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.0"
torch = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"
httpx = "^0.24.0"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
ruff = "^0.8.4"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
